# quilkin

./: .dockerignore  .gcloudignore  .gitignore  .gitmodules  BRANDING.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  about.toml  bacon.toml  build.rs  cloudbuild.yaml  code-of-conduct.md  deny.toml  justfile  license.csv.hbs  license.html.hbs  rust-toolchain.toml
.cargo/: config.toml
.ci/xdp/: cluster-config.yaml  integration-test.sh  proxy.dockerfile  proxy.dockerfile.dockerignore  server.yaml  spinup-cluster-with-registry.sh  veth-integ-test.sh
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  label-pr.yml  labeler.yml  pr_update.yml  unreal.yaml  xdp-integration-test.yml
agones/: .gitignore  Cargo.toml  README.md  main.tf
agones/src/: lib.rs  pod.rs  provider.rs  relay.rs  sidecar.rs  xds.rs
benches/: cluster_map.rs  compression.rs  misc.rs  read_write.rs  shared.rs  throughput.rs  token_router.rs
ci/: Dockerfile  Makefile  cloudbuild.yaml
crates/: gen.rs
crates/agones/: Cargo.toml  helm.yaml  main.tf
crates/agones/src/: lib.rs  pod.rs  provider.rs  relay.rs  sidecar.rs
crates/corrosion/: Cargo.toml
crates/corrosion-agent/: Cargo.toml
crates/corrosion/src/: lib.rs  schema.rs  test_utils.rs  utils.rs
crates/corrosion/src/client/: read.rs  write.rs
crates/corrosion/tests/: subscription.rs
crates/ebpf/: Cargo.toml  build.sh  rust-toolchain.toml
crates/ebpf/src/: dummy.c  ebpf-main.rs
crates/macros/: Cargo.toml
crates/macros/src/: include.rs  lib.rs
crates/nmap-service-probes/: Cargo.toml  README.md
crates/proto-gen/: Cargo.toml  gen.rs
crates/quilkin-proto/: Cargo.toml
crates/quilkin-proto/src/: generated.rs  lib.rs
crates/test/: Cargo.toml
crates/test/src/: lib.rs  xdp_util.rs
crates/test/tests/: capture.rs  concatenate.rs  filter_order.rs  firewall.rs  load_balancer.rs  local_rate_limit.rs  match.rs  mesh.rs  no_filter.rs  proxy.rs  test_filters.rs  token_router.rs  xdp.rs
crates/test/tests/snapshots/: xdp__changes_ip_version-2.snap  xdp__changes_ip_version.snap  xdp__simple_forwarding.snap
crates/types/: Cargo.toml
crates/xdp/: Cargo.toml
crates/xdp/src/: lib.rs
crates/xds/: Cargo.toml
crates/xds/src/: client.rs  config.rs  lib.rs  locality.rs  metrics.rs  net.rs  resource.rs  server.rs
docs/: README.md  admin.md  book.toml  faq.md  htmltest.yaml  integrations.md  preprocessor.sh  proxy-configuration.md  proxy.md  quickstart-agones-xonotic.md  quickstart-netcat.md  session.md  using.md  xds.md
docs/logos/: STICKER BLACK.ai  STICKER MASCOT.ai  STICKER WHITE.ai  STICKER YELLOW.ai
docs/src/: SUMMARY.md  admin.md  examples.md  faq.md  file-configuration.md  filters.md  installation.md  integrations.md  introduction.md  proxy-configuration.md  proxy-mode.md  proxy.md  quickstart-agones-xonotic.md  quickstart-netcat.md  quickstart.md  sdks.md  using.md  xds.md
examples/: client-proxy.yaml  control-plane.yaml  proxy.yaml  reciever.yaml  sender.yaml  server-proxy.yaml  xds.yaml
examples/agones-xonotic/: README.md  client-compress.yaml  sidecar-compress.yaml  sidecar.yaml
examples/agones-xonotic-relay/: README.md  client-token.yaml  fleet.yaml  gameserverallocation.yaml  proxy-pool.yaml  relay-control-plane.yaml  xds-control-plane.yaml
examples/agones-xonotic-sidecar/: README.md  client-compress.yaml  sidecar-compress.yaml  sidecar.yaml
examples/agones-xonotic-xds/: README.md  client-token.yaml  fleet.yaml  gameserverallocation.yaml  proxy-pool.yaml  xds-control-plane.yaml
examples/grafana-dashboards/: Makefile  README.md  grafana.yaml
examples/iperf3/: .gitignore  Dockerfile  README.md  clean.sh  proxy.yaml  run.sh
examples/quilkin-filter-example/: .gitignore  Cargo.toml  README.md  build.rs  config.yaml
examples/quilkin-filter-example/src/: generated.rs  greet.proto  main.rs
examples/xds/: Cargo.toml
examples/xds-management-server/: README.md  config.json  config.yaml  go.mod  go.sum
image/: Dockerfile  archive_dependencies.sh  quilkin.yaml
macros/: Cargo.toml  README.md
macros/src/: filter.rs  include.rs  lib.rs
main/api/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
main/book/: 404.html  FAQ.html  admin.html  examples.html  faq.html  file-configuration.html  filters.html  index.html  installation.html  integrations.html  introduction.html  print.html  proxy-configuration.html  proxy-mode.html  proxy.html  quickstart-agones-xonotic.html  quickstart-netcat.html  quickstart.html  sdks.html  searchindex.js  searchindex.json  session.html  toc.html  toc.js  using.html  xds.html
proto-gen/: gen.rs
proto/quilkin/: pprof.proto
sdks/ue4/: README.md
sdks/ue5/: Quilkin.uplugin  README.md
src/: admin.rs  alloc.rs  capture_bytes.rs  cli.rs  cluster.rs  codec.rs  collections.rs  components.rs  config.rs  debug.rs  endpoint.rs  extensions.rs  filters.rs  generated.rs  lib.rs  load_balancer_policy.rs  log.rs  main.rs  maxmind_db.rs  metadata.rs  metrics.rs  net.rs  pool.rs  prost.rs  protocol.rs  providers.rs  proxy.rs  runner.rs  server.rs  service.rs  signal.rs  socket.rs  task.rs  test.rs  test_utils.rs  time.rs  ttl_map.rs  utils.rs  xds.rs
src/admin/: health.rs
src/alloc/: metrics.rs  tracking.rs
src/cli/: admin.rs  agent.rs  generate_config_schema.rs  manage.rs  providers.rs  proxy.rs  qcmp.rs  relay.rs  run.rs  service.rs
src/cluster/: cluster_manager.rs  load_balancer.rs  metrics.rs  mod.rs  shared.rs
src/codec/: base64.rs  (+2 more)
test/: Cargo.toml
test/src/: lib.rs
test/tests/: mesh.rs  proxy.rs
tests/: capture.rs  compress.rs  concat_bytes.rs  concatenate.rs  concatenate_bytes.rs  endpoint_authentication.rs  filter_chain.rs  filter_order.rs  filters.rs  firewall.rs  hashed_token_router.rs  health.rs  hello_world.yaml  load_balancer.rs  local_rate_limit.rs  match.rs  matches.rs  metrics.rs  no_filter.rs  qcmp.rs  test_cmd.rs  token_router.rs  xds.rs
wasm/: Cargo.toml
xds/: README.md  config.yaml  go.mod  go.sum
(+7465 files in other folders)
