#
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[package]
name = "agones"
authors = ["Mark Mandel <markmandel@google.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "End to end integration tests to be run against a Kubernetes cluster with Agones installed"
readme = "README.md"

[dependencies]
base64.workspace = true
k8s-openapi.workspace = true
kube = { workspace = true, features = ["openssl-tls", "client", "derive", "runtime"] }
quilkin = { path = "../" }
tokio.workspace = true
tracing.workspace = true
