[package]
name = "corrosion"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies.corro-agent]
git = "https://github.com/EmbarkStudios/corrosion"
branch = "update-more"

[dependencies.corro-client]
git = "https://github.com/EmbarkStudios/corrosion"
branch = "update-more"
