[package]
name = "quilkin-ebpf"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
aya-ebpf = "0.1.1"
#aya-log-ebpf = "0.1"
network-types = "0.0.7"

[[bin]]
name = "packet-router"
path = "src/ebpf-main.rs"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
