#
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[package]
name = "qt"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Packet creation/parsing to validate the packet processing for XDP
etherparse = "0.17"
insta = { version = "1.42", features = ["json"] }
once_cell.workspace = true
quilkin.workspace = true
quilkin-xds.workspace = true
rand.workspace = true
serde_json.workspace = true
socket2.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
xdp = { workspace = true, features = ["__debug"] }
