[package]
name = "quilkin-xdp"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
# Used to load and attach eBPF programs
aya = "0.13.1"
# Allows forwarding trace messages from eBPF programs to a global logger
aya-log = "0.2.1"
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true
xdp = { git = "https://github.com/Jake-Shadle/xdp", branch = "impl" }
#xdp = { path = "../../../xdp" }

[lints]
workspace = true
