[package]
name = "xds"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quilkin-proto = { path = "../quilkin-proto" }

arc-swap.workspace = true
async-stream.workspace = true
cached.workspace = true
enum-map.workspace = true
eyre.workspace = true
futures.workspace = true
once_cell.workspace = true
prometheus.workspace = true
rand.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
fixedstr.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing-futures.workspace = true
tracing.workspace = true
tryhard.workspace = true
uuid.workspace = true
url.workspace = true
