[package]
name = "quilkin-xds"
version.workspace = true
description = "Quilkin is a non-transparent UDP proxy specifically designed for use with large scale multiplayer dedicated game server deployments, to ensure security, access control, telemetry data, metrics and more."
homepage = "https://github.com/googleforgames/quilkin"
repository = "https://github.com/googleforgames/quilkin"
edition.workspace = true
license.workspace = true

[lib]
test = true

[dependencies]
quilkin-proto.workspace = true

arc-swap.workspace = true
async-stream.workspace = true
cached.workspace = true
enum-map.workspace = true
eyre.workspace = true
fixedstr.workspace = true
forwarded-header-value = "0.1.1"
futures.workspace = true
h2 = "0.4"
once_cell.workspace = true
prometheus.workspace = true
parking_lot.workspace = true
prost.workspace = true
prost-types.workspace = true
rand.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing-futures.workspace = true
tracing.workspace = true
tryhard.workspace = true
uuid.workspace = true
url.workspace = true
http = "1.3.1"
tower = { workspace = true, features = ["tokio", "tracing"] }
