[package]
name = "quilkin-filter-example"
version = "0.1.0"
homepage = "https://github.com/googleforgames/quilkin"
repository = "https://github.com/googleforgames/quilkin"
edition = "2018"

[dependencies]
quilkin = "0.1.0"
tokio = { version = "1", features = ["full"]}
prost = "0.7"
prost-types = "0.7"
serde = "1.0"
serde_yaml = "0.8"
bytes = "1.0"

[build-dependencies]
prost-build = "0.7"
