#
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[workspace]

[package]
name = "quilkin-filter-example"
version = "0.1.0"
homepage = "https://github.com/googleforgames/quilkin"
repository = "https://github.com/googleforgames/quilkin"
edition = "2021"

[dependencies]
# If lifting this example, you will want to be explicit about the Quilkin version, e.g.
# quilkin = "0.2.0"
quilkin = { path = "../../" }
tokio = { version = "1.32", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
serde = "1"
serde_yaml = "0.9"
bytes = "1"
schemars = "0.8"
async-trait = "0.1"

[build-dependencies]
prost-build = "0.12"
protobuf-src = "1.1.0"
